# pdc-metadata-conversion

./: .gitignore  AmundsenSept2024records.xlsx  README.md  convert.py  convert_amundsen.py  main.py  makefile  pyproject.toml  sample.env
convert/: eov_to_keywords.yaml  iso.py
pdc/: __main__.py  eov_to_keywords.yaml  fgdc.py  iso.py  translate.py
tests/: test_pdc.py
tests/files/: pdc_13172_fgdc.xml  pdc_13172_iso.xml
